[project]
name = "task-manager"
version = "0.1.0"
description = ""
authors = [
    {name = "Omisen",email = "simone.conzo@outlook.it"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "task_manager", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
